<resources>
    <string name="app_name">Waterpolo Clock</string>
    <string name="displayStringBreak">Pause Viertel</string>
    <string name="and">und</string>
    <string name="displayStringPeriod">Viertel</string>
    <string name="end">Ende</string>
    <string name="Title">Wasserballuhr</string>
    <string name="_0">0</string>
    <string name="min">min</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="main_time_default_val">6:00</string>
    <string name="shotclock_default_val">30</string>
    <string name="timeout">Timeout(s)</string>
    <string name="_00">0</string>
    <string name="tesOffenceTime">30</string>
    <string name="reset_placeholder">Reset (%1$d)</string>
    <string name="reset_major">Reset (Major)</string>
    <string name="reset_minor">Reset (Minor)</string>
    <string name="reset_exclusion">Reset (Exclusion)</string>
    <string name="reset_all">Reset All</string>
    <string name="settings">"settings "</string>
    <string name="edit_times">edit</string>
    <string name="menu_item_title_nbOfPeriods">Number of periods</string>
    <string name="menu_item_title_time_per_period">Time per period [min]</string>
    <string name="menu_item_title_offence_time_major">Shotclock time duration [s]</string>
    <string name="menu_item_title_offence_time_minor">Shotclock time minor duration [s]</string>
    <string name="menu_item_title_offence_time_minor_reset">Always prevent shotclock reduction when resetting to minor duration</string>
    <string name="menu_item_title_offence_time_mino_reset_exclusion">Prevent shotclock reduction for exclusion reset to minor duration</string>
    <string name="menu_item_offence_time_minor_reset_enabled">Reset shotclock enabled</string>
    <string name="menu_item_title_decouple_timers">Decouple timers: Stop of offence time does not stop main time (for continuously running main time)</string>
    <string name="menu_item_decouple_timers">Timer decoupling enabled</string>
    <string name="menu_item_title_exclusion_time">Exclusion time duration [s], use 0 to disable</string>
    <string name="menu_item_title_timeout_time">Time per timeout [s]</string>
    <string name="menu_item_title_half_time">Halftime duration [min]</string>
    <string name="menu_item_title_break_time">Break duration [min]</string>
    <string name="menu_item_sound_enabled">Sound enabled</string>
    <string name="menu_item_shotclock_reset_enabled">Reset offence time on goal</string>
    <string name="menu_item_shotclock_reset_on_exclusion_enabled">Reset offence time on exclusion</string>
    <string name="menu_item_autodicovery_enabled">Master unit autodiscovery</string>
    <string name="menu_item_display_teamnames_enabled">Display teamnames on remote boards</string>
    <string name="menu_item_decimal_enabled">Decimal seconds enabled</string>
    <string name="menu_item_decimal_enabled_during_last">Decimal seconds enabled during last minute</string>
    <string name="menu_item_title_ip">Master unit IP</string>
    <string name="halftime">Halbzeit</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="title_activity_time_and_score_board">TimeAndScoreBoard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_item_title_timeout_end_warning">Warning prior to timeout end [s]</string>
    <string name="main_time">"Main Time "</string>
    <string name="shotclock">"Shotclock "</string>
    <string name="mixed_board">"Mixed Board"</string>
    <string name="scoreboard">"Scoreboard "</string>
    <string name="button_mixed_board_content_description">Mixed board</string>
    <string name="button_scoreboard_content_description">Scoreboard</string>
    <string name="button_shotclock_board_content_description">Shotclock</string>
    <string name="button_full_board_content_description">Full board</string>
    <string name="button_main_time_board_content_description">Main time</string>
    <string name="button_done_content_description">Done</string>
    <string name="button_shotclock_remote_control_board_content_description">Shotclock Remote Control</string>
    <string name="main_time_content_description">main time</string>
    <string name="home_team_default_name">Home</string>
    <string name="goals_home_content_description">goals home</string>
    <string name="shotclock_content_description">shotclock</string>
    <string name="guest_team_default_name">Guest</string>
    <string name="goals_guest_content_description">golas guest</string>
    <string name="menu_item_pause_during_break">Enable pause during break or timeout</string>
    <string name="menu_item_always_use_double_digits_for_goals">Always use double digits for goals</string>
    <string name="localhost">127.0.0.1</string>
    <string name="spacer_content_description">filler</string>
    <string name="menu_item_done_title">Done</string>
    <string name="shotclock_control_view_title">Shotclock control view</string>
    <string name="period_minus_content_description">period minus</string>
    <string name="period_plus_content_description">period plus</string>
    <string name="title_timeouts_home_content_description">Title timeouts home</string>
    <string name="timeouts_home_content_description">timeouts home</string>
    <string name="settings_content_description">Settings</string>
    <string name="title_timeouts_guest_content_description">Title timeouts guest</string>
    <string name="timeouts_guest_content_description">timeouts guest</string>
    <string name="boards_content_description">Remote Boards</string>
    <string name="timeouts_home_team_plus">Timeouts home team plus</string>
    <string name="timeouts_home_minus">Timeouts home minus</string>
    <string name="set_number_of_periods_content_description">Set number of periods</string>
    <string name="minutes_per_period_content_description">Set minutes per period</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="general_settings">General Settings</string>
</resources>
