<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Boards">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnShotclock"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/shotclock"
                android:onClick="openShotclock"
                android:text="@string/shotclock"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/BtnFullBoard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/full_board"
                android:onClick="openFullBoard"
                android:text="Full Board"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnMainTime"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/main_time"
                android:onClick="openMainTime"
                android:text="@string/main_time"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnMixedBoard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/mixed_board"
                android:onClick="openTimeAndScoreBoard"
                android:text="@string/mixed_board"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnScoreBoard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/score_board"
                android:onClick="openScoreBoard"
                android:text="@string/scoreboard"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnDone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@android:color/background_dark"
                android:onClick="onDoneClicked"
                android:text="Done"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                app:autoSizeMaxTextSize="400sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>